[package]
name = "krampui-updater"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.19"
eframe = "0.19"
reqwest = { version = "0.12.4", features = ["json", "stream"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3.30"
rfd = "0.14.1"

[profile.release]
opt-level = 3
debug = false
strip = "debuginfo"
lto = true
panic = 'unwind'